# DigitalGlassForming

./: CMakeLists.txt  FindBlob_ColoredBgSegmentation.m  FindBlob_ColoredBgSegmentation_Exp2.m  FindBlob_ColoredBgSegmentation_Exp3.m  FindBlob_ColoredBgSegmentation_Exp3_16L.m  FindBlob_ColoredBgSegmentation_Exp3_18L.m  GlassBlob_vs_LaserData.m  GlassBlob_vs_LaserData_Exp2.m  GlassBlob_vs_LaserData_Exp2_workzone.m  GlassBlob_vs_LaserData_Exp3_height.m  GlassBlob_vs_LaserData_Exp3_workzone.m  GlassDetection_Milestone1.txt  GlassVF.txt  Glass_BlobUp_vs_LaserData.m  Method2_Glass.m  Operations_Exp2.m  VidGen_OverHalfExpVid.m  helloworld.cpp  helloworld.ilk
